// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Block \`triangle="hide"\` 1`] = `
<DocumentFragment>
  <div
    class="rc-block rc-block--hide-triangle block-picker"
    style="width: 170px;"
  >
    <div
      class="rc-block__triangle"
      style="border-color: transparent transparent rgb(34, 25, 77);"
    />
    <div
      class="rc-block__head"
      style="background: rgb(34, 25, 77);"
    >
      <div
        class="rc-block__label"
        style="color: rgb(255, 255, 255);"
      >
        #22194d
      </div>
    </div>
    <div
      class="rc-block__body"
    >
      <div
        class="rc-block__swatches"
      >
        <div
          class="rc-block__swatch"
        >
          <span>
            <div
              aria-label="#D9E3F0"
              class="rc-swatch"
              role="button"
              style="background: rgb(217, 227, 240); border-radius: 4px;"
              tabindex="0"
              title="#D9E3F0"
            />
          </span>
        </div>
        <div
          class="rc-block__swatch"
        >
          <span>
            <div
              aria-label="#F47373"
              class="rc-swatch"
              role="button"
              style="background: rgb(244, 115, 115); border-radius: 4px;"
              tabindex="0"
              title="#F47373"
            />
          </span>
        </div>
        <div
          class="rc-block__swatch"
        >
          <span>
            <div
              aria-label="#697689"
              class="rc-swatch"
              role="button"
              style="background: rgb(105, 118, 137); border-radius: 4px;"
              tabindex="0"
              title="#697689"
            />
          </span>
        </div>
        <div
          class="rc-block__swatch"
        >
          <span>
            <div
              aria-label="#37D67A"
              class="rc-swatch"
              role="button"
              style="background: rgb(55, 214, 122); border-radius: 4px;"
              tabindex="0"
              title="#37D67A"
            />
          </span>
        </div>
        <div
          class="rc-block__swatch"
        >
          <span>
            <div
              aria-label="#2CCCE4"
              class="rc-swatch"
              role="button"
              style="background: rgb(44, 204, 228); border-radius: 4px;"
              tabindex="0"
              title="#2CCCE4"
            />
          </span>
        </div>
        <div
          class="rc-block__swatch"
        >
          <span>
            <div
              aria-label="#555555"
              class="rc-swatch"
              role="button"
              style="background: rgb(85, 85, 85); border-radius: 4px;"
              tabindex="0"
              title="#555555"
            />
          </span>
        </div>
        <div
          class="rc-block__swatch"
        >
          <span>
            <div
              aria-label="#dce775"
              class="rc-swatch"
              role="button"
              style="background: rgb(220, 231, 117); border-radius: 4px;"
              tabindex="0"
              title="#dce775"
            />
          </span>
        </div>
        <div
          class="rc-block__swatch"
        >
          <span>
            <div
              aria-label="#ff8a65"
              class="rc-swatch"
              role="button"
              style="background: rgb(255, 138, 101); border-radius: 4px;"
              tabindex="0"
              title="#ff8a65"
            />
          </span>
        </div>
        <div
          class="rc-block__swatch"
        >
          <span>
            <div
              aria-label="#ba68c8"
              class="rc-swatch"
              role="button"
              style="background: rgb(186, 104, 200); border-radius: 4px;"
              tabindex="0"
              title="#ba68c8"
            />
          </span>
        </div>
        <div
          class="rc-block__clear"
        />
      </div>
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-4"
          spellcheck="false"
          value="#22194D"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Block renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-block block-picker"
    style="width: 170px;"
  >
    <div
      class="rc-block__triangle"
      style="border-color: transparent transparent rgb(34, 25, 77);"
    />
    <div
      class="rc-block__head"
      style="background: rgb(34, 25, 77);"
    >
      <div
        class="rc-block__label"
        style="color: rgb(255, 255, 255);"
      >
        #22194d
      </div>
    </div>
    <div
      class="rc-block__body"
    >
      <div
        class="rc-block__swatches"
      >
        <div
          class="rc-block__swatch"
        >
          <span>
            <div
              aria-label="#D9E3F0"
              class="rc-swatch"
              role="button"
              style="background: rgb(217, 227, 240); border-radius: 4px;"
              tabindex="0"
              title="#D9E3F0"
            />
          </span>
        </div>
        <div
          class="rc-block__swatch"
        >
          <span>
            <div
              aria-label="#F47373"
              class="rc-swatch"
              role="button"
              style="background: rgb(244, 115, 115); border-radius: 4px;"
              tabindex="0"
              title="#F47373"
            />
          </span>
        </div>
        <div
          class="rc-block__swatch"
        >
          <span>
            <div
              aria-label="#697689"
              class="rc-swatch"
              role="button"
              style="background: rgb(105, 118, 137); border-radius: 4px;"
              tabindex="0"
              title="#697689"
            />
          </span>
        </div>
        <div
          class="rc-block__swatch"
        >
          <span>
            <div
              aria-label="#37D67A"
              class="rc-swatch"
              role="button"
              style="background: rgb(55, 214, 122); border-radius: 4px;"
              tabindex="0"
              title="#37D67A"
            />
          </span>
        </div>
        <div
          class="rc-block__swatch"
        >
          <span>
            <div
              aria-label="#2CCCE4"
              class="rc-swatch"
              role="button"
              style="background: rgb(44, 204, 228); border-radius: 4px;"
              tabindex="0"
              title="#2CCCE4"
            />
          </span>
        </div>
        <div
          class="rc-block__swatch"
        >
          <span>
            <div
              aria-label="#555555"
              class="rc-swatch"
              role="button"
              style="background: rgb(85, 85, 85); border-radius: 4px;"
              tabindex="0"
              title="#555555"
            />
          </span>
        </div>
        <div
          class="rc-block__swatch"
        >
          <span>
            <div
              aria-label="#dce775"
              class="rc-swatch"
              role="button"
              style="background: rgb(220, 231, 117); border-radius: 4px;"
              tabindex="0"
              title="#dce775"
            />
          </span>
        </div>
        <div
          class="rc-block__swatch"
        >
          <span>
            <div
              aria-label="#ff8a65"
              class="rc-swatch"
              role="button"
              style="background: rgb(255, 138, 101); border-radius: 4px;"
              tabindex="0"
              title="#ff8a65"
            />
          </span>
        </div>
        <div
          class="rc-block__swatch"
        >
          <span>
            <div
              aria-label="#ba68c8"
              class="rc-swatch"
              role="button"
              style="background: rgb(186, 104, 200); border-radius: 4px;"
              tabindex="0"
              title="#ba68c8"
            />
          </span>
        </div>
        <div
          class="rc-block__clear"
        />
      </div>
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-1"
          spellcheck="false"
          value="#22194D"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BlockSwatches renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-block__swatches"
  >
    <div
      class="rc-block__swatch"
    >
      <span>
        <div
          aria-label="#fff"
          class="rc-swatch"
          role="button"
          style="background: rgb(255, 255, 255); border-radius: 4px;"
          tabindex="0"
          title="#fff"
        />
      </span>
    </div>
    <div
      class="rc-block__swatch"
    >
      <span>
        <div
          aria-label="#999"
          class="rc-swatch"
          role="button"
          style="background: rgb(153, 153, 153); border-radius: 4px;"
          tabindex="0"
          title="#999"
        />
      </span>
    </div>
    <div
      class="rc-block__swatch"
    >
      <span>
        <div
          aria-label="#000"
          class="rc-swatch"
          role="button"
          style="background: rgb(0, 0, 0); border-radius: 4px;"
          tabindex="0"
          title="#000"
        />
      </span>
    </div>
    <div
      class="rc-block__clear"
    />
  </div>
</DocumentFragment>
`;
